# backend/app/Models/EditionParticipant.php
@@ -18,6 +18,7 @@ use Illuminate\Database\Eloquent\Relations\HasMany;
  * @property int $group_id
  * @property int $group_member_id
  * @property-read Collection<int, Wish> $wishes
+ * @property-read Collection<int, Message> $messages
  */
 #[Fillable(['edition_id', 'group_id', 'group_member_id'])]
 #[UsePolicy(EditionParticipantPolicy::class)]
@@ -60,5 +61,17 @@ class EditionParticipant extends Model
     public function wishes(): HasMany
     {
         return $this->hasMany(Wish::class)->orderBy('sort_order')->orderBy('id');
+    }
+
+    /** @return HasMany<Message, $this> */
+    public function messages(): HasMany
+    {
+        return $this->hasMany(Message::class, 'sender_edition_participant_id');
+    }
+
+    /** @return HasMany<ConversationRead, $this> */
+    public function conversationReads(): HasMany
+    {
+        return $this->hasMany(ConversationRead::class);
     }
 }
